<resources>
    <string name="app_name">Las Pastillas Del Abuelo</string>
    <string name="action_settings">Settings</string>
    <string name="tolva">Tolva: </string>
    <string name="pick_time">Seleccione un Horario</string>
    <string name="volver">VOLVER</string>
    <string name="planificar">PLANIFICAR</string>
    <string name="usar_sensores">USAR SENSORES</string>
    <string name="bienvenido">Bienvenido al Sistema de Gestión del Pastillero electrónico</string>
    <string name="planif_act_title">Su planificación Actual es: </string>
    <string name="btn_guardar_planif">GUARDAR PLANIFICACIÓN</string>
    <string name="txt_sensores">
        Bienvenido a la pantalla de administración del pastillero por medio de sensores.\n
        Siga las siguientes instrucciones:\n
        - Para obtener una pastilla, agite el teléfono.\n
        - Para prender un Led, acerque su mano al teléfono.\n
        - Para hacer otra cosa, usamos otro sensor.\n

    </string>

    <string name="dias">DIA </string>
    <string name="horas">HORA </string>
    <string name="minutos">MINUTOS </string>

    <string name="lunes">Lunes: </string>
    <string name="martes">Martes </string>
    <string name="miercoles">Miércoles </string>
    <string name="jueves">Jueves </string>
    <string name="viernes">Viernes </string>
    <string name="sabado">Sábado </string>
    <string name="domingo">Domingo </string>
    <string name="bt_connected">Conectado con placa por BT: No </string>
    <string name="sincro">SINCRONIZAR </string>
</resources>
